# cat-in-rust

./: .gitignore  Cargo.toml  README.md  endurance.py
.cargo/: config.toml
.github/workflows/: CI.yml
components/: Cargo.toml
components/src/: lib.rs  matrix.rs  mouse.rs
components/src/mouse/: pointer.rs  wheel.rs
configs/: Cargo.toml
configs/src/: left_finger.rs  left_thumb.rs  lib.rs  right_finger.rs
core/: Cargo.toml  README.md
core/src/: main.rs
core/src/hardware/: optical_ptr.rs
left/: Cargo.toml
left/src/: main.rs
primary/: Cargo.toml
primary/src/: hardware.rs  main.rs
primary/src/hardware/: matrix.rs  wheel.rs
right/: Cargo.toml
right/src/: main.rs
secondary/: Cargo.toml
secondary/src/: main.rs
src/: board_modules.rs  hardware.rs  main.rs
src/board_modules/: left_finger.rs
src/hardware/: matrix.rs  optical_ptr.rs  wheel.rs
