[package]
name = "components"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generic-array = "1.0.0"
typenum = {version = "1.17.0", features = ["const-generics"] }
hal = {package = "embedded-hal", version = "0.2.7" }
keyberon = {git = "https://github.com/Ben-PH/keyberon"}
transpose = {git = "https://github.com/Ben-PH/transpose"}
usbd-human-interface-device = "0.4.3"
