[package]
name = "cat_esp32s3_rust_primary"
version = "0.1.0"
authors = ["Ben PHL <benphawke@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
components = {path = "../components/"}
configs = {path = "../configs/"}
esp_hal = { package = "esp32s3-hal", version = "0.12.0" }
esp-backtrace = { version = "0.7.0", features = ["esp32s3", "panic-handler", "exception-handler", "print-uart"] }
esp-println       = { version = "0.5.0", features = ["esp32s3", "log"] }
keyberon = {git = "https://github.com/Ben-PH/keyberon"}
transpose = {git = "https://github.com/Ben-PH/transpose"}
critical-section = "1.1.1"
generic-array = "0.14.7"
heapless = "0.7.16"
log = "0.4.18"
usbd-hid = "0.6.1"
usb-device = "0.2.9"
usbd-human-interface-device = "0.4.3"
num_enum_derive = "0.7.0"
num_enum = {version = "0.7.0", default_features = false }
fugit = "0.3.7"
